--- a/src/component/styles.scss
+++ b/src/component/styles.scss
@@ -4,3 +4,14 @@ body {
   font-family: $font-stack;
   margin: 0px;
 }
+
+a {
+  text-decoration: none;
+  color: black;
+}
+
+ul{
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
