Fix some css issues

--- a/src/component/header/header.scss
+++ b/src/component/header/header.scss
@@ -15,6 +15,7 @@ header{
 .nav_settings{
     float: right;
     line-height: 65px;
+    padding-right: 20px;
     .nav-settings-elements{
       display: flex;
       .nav-settings-elem{
