Fix some css issues again

--- a/src/component/sidebar/sidebar.scss
+++ b/src/component/sidebar/sidebar.scss
@@ -10,6 +10,13 @@ $white: #fff;
   float: left;
 }
 
+.bkj{
+  width: 160px;
+  height: 100%;
+  left: 0;
+  top: 0;
+}
+
 .sidebar-list{
   display: flex;
   margin-top: 20px;
